# fixed-collections

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust-clippy.yml
src/: lib.rs
