[package]
name = "fixed-collections"
version = "0.8.9"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
num-complex = { version = "0.4.6", optional = true }
rustfft = { version = "6.2.0", optional = true }

[features]
default = [ "circular-buffer-fft" ]
circular-buffer-fft = [ "dep:rustfft", "dep:num-complex" ]
