[package]
name = "fixed-collections"
description = "Dynamically allocated ungrowable collections."
version = "0.1.89"
edition = "2024"

license = "MIT OR Apache-2.0"
readme = true

authors = [ "Herman A. Gohn" ]

keywords = [ "array", "contiguous", "buffer" ]
categories = [ "no-std", "data-structures", "embedded", "development-tools::ffi" ]

[dependencies]
num-traits = { version = "0.2.19", optional = true, default-features = false }
num-complex = { version = "0.4.6", optional = true, default-features = false }
rustfft = { version = "6.2.0", optional = true }

[features]
std = ["num-traits/std", "num-complex/std"]
default = [ "num-traits" ]
circular-buffer-fft = [ "dep:rustfft", "dep:num-complex", "num-traits", "std" ]
num-traits = [ "dep:num-traits" ]
